# FAVA

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg
.github/workflows/: main.yml  quality.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/_build/doctrees/: authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  readme.doctree  usage.doctree
docs/_build/html/: .buildinfo  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  objects.inv  readme.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: installation.rst.txt  usage.rst.txt
fava/: __init__.py  __main__.py  __test__.py  _version.py  cli.py  pipeline_settings.json  run_pipeline_v2.py
fava/analysis/: __init__.py  auto_correlations.py  cross_correlation.py  fractal_dimension.py  kinetic_energy_spectra.py  mass_sum.py  pdf1d.py  pdf2d.py  reynolds_stress.py  slice_average.py  slice_integration.py  structure_functions.py  volume_average.py  volume_integration.py
fava/geometry/: __init__.py  _enums.py  geometry.py
fava/mesh/: FlashAMR.py  __init__.py  mesh.py  structured.py  unstructured.py
fava/mesh/FLASH/: FlashAMR.py  FlashParticles.py  FlashUniform.py  __init__.py  _flash.py  _util.py
fava/model/: __init__.py  flash.py  model.py
fava/temporary/: __init__.py  _exceptions.py  temporary.py
fava/util/: __init__.py  _exceptions.py  _mpi.py  _types.py
requirements/: prod.txt
tests/: conftest.py  test_fava.py  test_model.py
tests/geometry/: test_geometry.py
tests/mesh/: test_FlashAMR.py  test_mesh.py  test_structured.py  test_unstructured.py
tests/temporary/: test_temporary.py
todo/: CONTRIBUTING.rst  LICENSE  README.rst  ROADMAP.rst  ToDo.rst  pyFLASH.py  pyproject.toml  setup.cfg  setup.py  tox.ini
