[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "FAVA"
description = "Fluids Advanced Variable Analysis (FAVA) designed for analyzing computational fluid dynamics data."

authors = [{name = "Ezra Brooker", email = "ebrooker@fsu.edu"},]
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["fava", "flash", "cfd"]


classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
]
dynamic = ["version"]

[project.optional-dependencies]


[project.scripts]


# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/