[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fava"
description = "Fluid-Advanced Variable Analysis"
authors = [{name = "Ezra Brooker", email = "ebrooker@fsu.edu"},]
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.11"
keywords = ["fava", "flash", "cfd"]

classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "h5py>=3.12.1",
    "llvmlite>=0.44.0",
    "matplotlib>=3.10.0",
    "mpi4py>=4.0.2",
    "mpi4py-fft>=2.0.6",
    "numba==0.61.0",
    "numpy>=2.1.3",
    "scipy>=1.15.1",
]

dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["./"]  # list of folders that contain the packages (["."] by default)
include = ["fava*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["fava.tests*"]  # exclude packages matching these glob patterns (empty by default)

[tool.setuptools.dynamic]
version = {attr = "fava.__version__.__version__"} 


[tool.uv]
constraint-dependencies = ["llvm>0.43.0"]
