############################
##### PACKAGE METADATA #####
############################

[tool.poetry]
name = "fava"
version = "0.0.0.alpha"
description = "Library for Advanced Variable Analysis of Meshed Data (LAVA-MD) designed for analyzing computational fluid dynamics data and other meshed datasets."
authors = ["Ezra Brooker <ebrooker@github.io>"]
license = "MIT"
readme = "README.md"
keywords = ["fava", "flash", "cfd"]
repository = "https://github.com/ebrooker/fava"
documentation = "https://fava.readthedocs.io"
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "fava"},
]

#######################################################################


#########################
##### URLs METADATA #####
#########################

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ebrooker/fava/issues"
"Changelong" = "https://fava.readthedocs.io/en/latest/changelog.html"

#######################################################################


################################
##### PACKAGE DEPENDENCIES #####
################################

[tool.poetry.dependencies]
python = "^3.10"

#######################################################################


#################################
##### PACKAGE DOCUMENTATION #####
#################################

[tool.poetry.group.docs]
optional = true

#######################################################################


##############################
##### PACKAGE VERSIONING #####
##############################

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variable = [
    "fava/__init__.py:__version__",
]
branch = "main"
build_command = "pip install poetry && poetry build"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "chore*",
    "ci*",
]

#######################################################################


################################
##### PACKAGE BUILD SYSTEM #####
################################

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#######################################################################

